--- a/config.example.env
+++ b/config.example.env
@@ -1,3 +1,5 @@
+# if you want to publish express, set it to 0.0.0.0
+MONGO_EXPRESS_HOST=127.0.0.1
 # local path where to store MongoDB
 MONGODB_PATH=./mongodb
 # MongoDB port
